# AzCore

./: .gcc-flags.json  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  build.bat  build.sh  makefile  mingw-w64-x86_64.cmake
base/: AzCoreConfig.cmake  CMakeLists.txt  makefile  manifest.xml
base/src/: manifest.xml  resources.rc
base/src/AzCore/: Assert.cpp  Assert.hpp  Environment.cpp  Environment.hpp  Image.cpp  Image.hpp  Profiling.cpp  Profiling.hpp  QuickSort.hpp  Simd.hpp  SoftwareRendering.cpp  SoftwareRendering.hpp  Sort.hpp  TemplateUtil.hpp  Thread.cpp  Thread.hpp  ThreadLinux.cpp  ThreadLinux.hpp  ThreadWin32.cpp  ThreadWin32.hpp  Time.cpp  Time.hpp  basictypes.hpp  bigint.cpp  bigint.hpp  common.hpp  font.cpp  font.hpp  font_cff_std_data.c  font_cff_std_strings.c  font_tables.cpp  font_tables.hpp  gpu.cpp  gpu.hpp  gui.cpp  gui.hpp  io.cpp  io.hpp  io_linux.cpp  io_win32.cpp  (+10 more)
base/src/AzCore/Font/: CFF.cpp  CFF.hpp  FontTables.cpp  FontTables.hpp  font_cff_std_data.c
base/src/AzCore/IO/: ButtonState.cpp  ButtonState.hpp  FileManager.cpp  FileManager.hpp  Gamepad.cpp  Gamepad.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  LogStream.cpp  LogStream.hpp  RawInput.cpp  RawInput.hpp  Window.hpp  vt_strings.hpp
base/src/AzCore/Math/: Angle.cpp  Angle.hpp  Color.cpp  Color.hpp  Equations.hpp  FastApprox.hpp  Matrix.hpp  Noise.cpp  Noise.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  basic.cpp  basic.hpp  complex_t.hpp  mat2_t.hpp  mat3_t.hpp  mat4_t.cpp  mat4_t.hpp  mat5_t.hpp  quat_t.hpp  vec2_t.hpp  vec3_t.hpp  vec4_t.hpp  vec5_t.hpp
base/src/AzCore/Memory/: Any.hpp  Array.hpp  ArrayList.hpp  ArrayWithBucket.hpp  BigInt.cpp  BigInt.hpp  BinaryMap.hpp  BinarySet.hpp  BucketArray.hpp  ByteHash.hpp  Endian.cpp  Endian.hpp  HashMap.hpp  HashSet.hpp  IndexHash.hpp  List.hpp  Map.hpp  None.hpp  Optional.hpp  Ptr.hpp  RAIIHacks.hpp  Range.hpp  Result.hpp  Set.hpp  StaticArray.hpp  String.cpp  String.hpp  StringArena.cpp  StringArena.hpp  StringCommon.hpp  TemplateForwardDeclares.hpp  TypeHash.hpp  UniquePtr.hpp  Util.cpp  Util.hpp
base/src/AzCore/Net/: Sockets.cpp  Sockets.hpp
base/src/AzCore/SIMD/: SimdAVX.hpp  SimdMMX.hpp  SimdSSE2.hpp
projects/Az2D/: Az2DConfig.cmake  Az2DDataCopy.cmake  CMakeLists.txt
projects/Az2D/src/Az2D/: assets.cpp  assets.hpp  console_commands.cpp  console_commands.hpp  entity_basics.cpp  entity_basics.hpp  game_systems.cpp  game_systems.hpp  gui_basics.cpp  gui_basics.hpp  profiling.cpp  profiling.hpp  rendering.cpp  rendering.hpp  settings.cpp  settings.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp
projects/Az2D_Example/: CMakeLists.txt
projects/Az2D_Example/data/textures/: Player.tga  PlayerScream.tga  guy.tga
projects/Az2D_Example/src/: entities.cpp  entities.hpp  gui.cpp  gui.hpp  main.cpp  resources.rc
projects/Az3D/: Az3DConfig.cmake  Az3DDataCopy.cmake  CMakeLists.txt
projects/Az3D/lib/: OpenAL32.lib
projects/Az3D/scripts/: az3d_export.py
projects/Az3D/src/Az3D/: Az3DObj.cpp  Az3DObj.hpp  animation.cpp  animation.hpp  assets.cpp  assets.hpp  game_systems.cpp  game_systems.hpp  profiling.cpp  profiling.hpp  rendering.cpp  rendering.hpp  settings.cpp  settings.hpp  sound.cpp  sound.hpp
projects/Az3D_Example/: CMakeLists.txt
projects/Az3D_Example/data/models/: F-232 Eagle.az3d  Grass_Blade.az3d  Grass_Patch.az3d  Tree.az3d  Tube.az3d  Weathered Metal Fence.az3d  ground.az3d  shitman.az3d  suzanne.az3d
projects/Az3D_Example/src/: main.cpp  resources.rc
projects/LD46/: CMakeLists.txt  ideas.md  makefile
projects/LD46/data/: levels.txt
projects/LD46/data/levels/: Level 2.world  Level 3.world  Level 4.world  Level 5.world  Mind the Gap.world  My Level Two.world  My Level.world  Sprinklers.world
projects/LD46/data/locale/: en.locale  es.locale  ja.locale  ko.locale
projects/LD46/src/: assets.cpp  assets.hpp  entities.cpp  entities.hpp  entity_basics.cpp  entity_basics.hpp  globals.cpp  globals.hpp  gui.cpp  gui.hpp  main.cpp  objects.cpp  objects.hpp  rendering.cpp  rendering.hpp  resources.rc  sound.cpp  sound.hpp
projects/LD46/src/shaders/: 2D.frag  2D.vert  Circle.frag  Font.frag
projects/LD46/src/stb/: stb_vorbis.c
projects/font_test/: CMakeLists.txt  makefile
projects/font_test/src/: main.cpp
projects/fractal_explorer/: CMakeLists.txt  makefile
projects/fractal_explorer/src/: main.cpp  resources.rc
projects/noise_test/: CMakeLists.txt
projects/noise_test/src/: main.cpp  resources.rc
projects/persistence/: CMakeLists.txt  makefile
projects/persistence/src/: main.cpp  tenThousandPrimes.cpp
projects/polyprox/: CMakeLists.txt
projects/polyprox/src/: main.cpp
projects/tower_defense/: CMakeLists.txt  bug_reports.txt  makefile
projects/tower_defense/data/: circle.tga  test.tga
projects/tower_defense/data/locale/: en.locale  es.locale  ja.locale  ko.locale
projects/tower_defense/data/textures/: gamma.tga
projects/tower_defense/scripts/: CompileShaders.sh  PackLinux.sh
projects/tower_defense/src/: assets.cpp  assets.hpp  entities.cpp  entities.hpp  entity_basics.cpp  entity_basics.hpp  globals.cpp  globals.hpp  gui.cpp  gui.hpp  main.cpp  objects.cpp  objects.hpp  rendering.cpp  rendering.hpp  resources.rc  sound.cpp  sound.hpp
projects/tower_defense/src/shaders/: 2D.frag  2D.vert  Circle.frag  Font.frag
projects/tower_defense/src/stb/: stb_vorbis.c
projects/unit_tests/: CMakeLists.txt  makefile
projects/unit_tests/src/: UnitTests.cpp  UnitTests.hpp  Utilities.cpp  Utilities.hpp  main.cpp
projects/unit_tests/src/tests/: Angle.cpp  BasicMath.cpp  BinaryMap.cpp  BinarySet.cpp  BranchPredictionVsReturnAddressPrediction.cpp  (+11 more)
projects/vulkan_quad/: CMakeLists.txt  makefile
projects/vulkan_quad/scripts/: PackWindows.sh
projects/vulkan_quad/src/: main.cpp  resources.h  resources.rc
projects/vulkan_tesseract/: CMakeLists.txt  makefile
projects/vulkan_tesseract/src/: main.cpp  resources.rc
projects/window_test/: CMakeLists.txt  makefile
projects/window_test/src/: main.cpp
(+97 files in other folders)
